# ai-research-assistant

./: .gitignore  README.md  pyproject.toml
src/ai_research_assistant/: crew.py  main.py
src/ai_research_assistant/config/: agents.yaml  tasks.yaml
