[project]
name = "ai_research_assistant"
version = "0.1.0"
description = "ai-research-assistant using crewAI"
authors = [{ name = "Rudra Prasad Bhuyan"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
ai_research_assistant = "ai_research_assistant.main:run"
run_crew = "ai_research_assistant.main:run"
train = "ai_research_assistant.main:train"
replay = "ai_research_assistant.main:replay"
test = "ai_research_assistant.main:test"
run_with_trigger = "ai_research_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
